54 - spin up simulator